wordpress/mysql-stfl.yaml
apiVersion: apps/v1 
kind: StatefulSet
metadata:
  name: wordpress-mysql
  labels:
    db: mysql
  namespace: wordpress
spec:
  replicas: 1
  serviceName: wordpress-mysql
  selector:
    matchLabels:
      db: mysql
  template:
    metadata:
      labels:
        db: mysql
    spec:
      containers:
      - image: mysql:9.1.0
        name: mysql
        livenessProbe:
          tcpSocket:
            port: 3306
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
