wordpress/wordpress-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress
  labels:
    app: wordpress
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress
        image: wordpress:6.6.2-apache
        ports:
        - containerPort: 80
        volumeMounts:
        - name: wordpress-storage
          mountPath: /var/www/html
        resources:
          requests:
            memory: 128Mi
            cpu: 100m   
          limits:
            memory: 256Mi
            cpu: 200m   
      volumes:
      - name: wordpress-storage
        persistentVolumeClaim:
          claimName: wp-pvc
